src/objects/QPMS__Medical_Device_Information__c.object
<CustomObject>
    <fields>
        <fullName>QPMS__AT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AT</description>
        <label>AT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Active_Device__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active Device</description>
        <label>Active Device</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Age_of_Device__c</fullName>
        <description>Age of Device</description>
        <inlineHelpText>Age of Device</inlineHelpText>
        <label>Age of Device</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__All_EEA_Switzerland_and_Turkey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All EEA, Switzerland and Turkey</description>
        <label>All EEA, Switzerland and Turkey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Availability_of_device_for_evaluation__c</fullName>
        <description>Availability of device for evaluation</description>
        <inlineHelpText>Availability of device for evaluation</inlineHelpText>
        <label>Availability of device for evaluation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Neither (with explanation)</fullName>
                </value>
                <value>
                    <fullName>Returned to Manufacturer/Importer</fullName>
                </value>
                <value>
                    <fullName>Destroyed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__BE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BE</description>
        <label>BE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__BG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BG</description>
        <label>BG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Basic_UDI_DI_Eudamed_DI__c</fullName>
        <description>Basic UDI-DI/Eudamed-DI</description>
        <label>Basic UDI-DI/Eudamed-DI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CH</description>
        <label>CH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__CY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CY</description>
        <label>CY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__CZ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CZ</description>
        <label>CZ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Catalogue_reference_number__c</fullName>
        <description>Catalogue/reference number</description>
        <label>Catalogue/reference number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Companion_Diagnostic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Companion Diagnostic</description>
        <label>Companion Diagnostic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__ComplaintId__c</fullName>
        <description>Complaint Id</description>
        <formula>QPMS__Regulatory_Report__r.QPMS__Complaint__c</formula>
        <label>ComplaintId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Control_Lot_Serial_No__c</fullName>
        <description>Control/Lot/Serial No.</description>
        <inlineHelpText>Control/Lot/Serial No.</inlineHelpText>
        <label>Control/Lot/Serial No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Custom_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Custom-Made</description>
        <label>Custom-Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__DE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DE</description>
        <label>DE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__DK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DK</description>
        <label>DK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Date_When_Device_Was_Explanted__c</fullName>
        <description>Date When Device Was Explanted</description>
        <label>Date When Device Was Explanted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Date_When_Device_Was_Implanted__c</fullName>
        <description>Date When Device Was Implanted</description>
        <label>Date When Device Was Implanted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Device_Expiry_Date__c</fullName>
        <description>Device Expiry Date</description>
        <label>Device Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Device_Identification_No__c</fullName>
        <description>Device Identification No</description>
        <inlineHelpText>Device Identification No</inlineHelpText>
        <label>Device Identification No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Device_License_No__c</fullName>
        <description>Device License No</description>
        <inlineHelpText>Device License No</inlineHelpText>
        <label>Device License No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Device_Manufacturing_Date__c</fullName>
        <description>Manufacturing Date</description>
        <label>Device Manufacturing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Device_Placed_On_the_Market__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This device has been placed on the market before the implementation of the MDD/AIMDD/IVDD</description>
        <label>Device Placed On the Market</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__EE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EE</description>
        <label>EE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__ES__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ES</description>
        <label>ES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Expiration_Date__c</fullName>
        <description>Expiration Date</description>
        <inlineHelpText>Expiration Date</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Explant_Facility__c</fullName>
        <description>Explant Facility</description>
        <label>Explant Facility</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Explanted_To__c</fullName>
        <description>Explanted To</description>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__FI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FI</description>
        <label>FI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__FR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FR</description>
        <label>FR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Firmware_Version__c</fullName>
        <description>Firmware Version</description>
        <label>Firmware Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__First_Declaration_Of_Conformity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>First Declaration Of Conformity</description>
        <label>First Declaration Of Conformity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_Up_Number__c</fullName>
        <description>Follow Up Number</description>
        <formula>TEXT( QPMS__Regulatory_Report__r.QPMS__Follow_Up_Number__c )</formula>
        <label>Follow Up Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__GB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>GB</description>
        <label>GB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__GR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>GR</description>
        <label>GR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__HR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HR</description>
        <label>HR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__HU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HU</description>
        <label>HU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__How_long_was_the_device_in_use__c</fullName>
        <description>How long was the device in use?</description>
        <inlineHelpText>How long was the device in use?</inlineHelpText>
        <label>How long was the device in use?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__IE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IE</description>
        <label>IE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__IS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IS</description>
        <label>IS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__IT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IT</description>
        <label>IT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__IVDD__c</fullName>
        <description>IVDD</description>
        <label>IVDD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IVD Annex II List A</fullName>
                </value>
                <value>
                    <fullName>IVD Annex II List B</fullName>
                </value>
                <value>
                    <fullName>IVD devices for self-testing</fullName>
                </value>
                <value>
                    <fullName>IVD general</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__IVDR__c</fullName>
        <description>IVDR</description>
        <label>IVDR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>class D</fullName>
                </value>
                <value>
                    <fullName>class C</fullName>
                </value>
                <value>
                    <fullName>class B</fullName>
                </value>
                <value>
                    <fullName>class A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Implant_Facility__c</fullName>
        <description>Implant Facility</description>
        <label>Implant Facility</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Implantable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Implantable</description>
        <label>Implantable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Implanted_To__c</fullName>
        <description>Implanted To</description>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Indicate_The_Date__c</fullName>
        <label>Indicate The Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First declaration of conformity</fullName>
                </value>
                <value>
                    <fullName>The device first CE marked</fullName>
                </value>
                <value>
                    <fullName>First placed on the market</fullName>
                </value>
                <value>
                    <fullName>First put into service</fullName>
                </value>
                <value>
                    <fullName>If software, date first made available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Instrument__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Instrument</description>
        <label>Instrument</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Intended_To_Administer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Intended to administer and/or remove a medicinal product</description>
        <label>Intended To Administer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__LI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LI</description>
        <label>LI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__LT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LT</description>
        <label>LT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__LU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LU</description>
        <label>LU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__LV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LV</description>
        <label>LV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Lot_Batch_Number__c</fullName>
        <description>Lot/Batch Number</description>
        <label>Lot/Batch Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__MDD_AIMDD__c</fullName>
        <label>MDD/AIMDD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>active implant</fullName>
                </value>
                <value>
                    <fullName>class III</fullName>
                </value>
                <value>
                    <fullName>class IIb</fullName>
                </value>
                <value>
                    <fullName>class I</fullName>
                </value>
                <value>
                    <fullName>class Is</fullName>
                </value>
                <value>
                    <fullName>class IM</fullName>
                </value>
                <value>
                    <fullName>class Ism</fullName>
                </value>
                <value>
                    <fullName>custom-made</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__MDR__c</fullName>
        <description>MDR</description>
        <label>MDR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>class III</fullName>
                </value>
                <value>
                    <fullName>class IIb</fullName>
                </value>
                <value>
                    <fullName>class IIa</fullName>
                </value>
                <value>
                    <fullName>class I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__MT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MT</description>
        <label>MT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturer_s_Medical_Device_Identifier__c</fullName>
        <description>Manufacturer’s Medical Device Identifier (catalogue/model no.)</description>
        <inlineHelpText>Manufacturer’s Medical Device Identifier (catalogue/model no.)</inlineHelpText>
        <label>Manufacturer’s Medical Device Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Measuring_Function__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Measuring Function</description>
        <label>Measuring Function</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Medical_Device_Terminology_Other__c</fullName>
        <description>Medical_Device_Terminology_Other</description>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Medical_device_name__c</fullName>
        <description>Medical device name</description>
        <label>Medical device name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Medical_device_nomenclature_code__c</fullName>
        <description>Medical device nomenclature code</description>
        <label>Medical device nomenclature code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Medical_device_terminology__c</fullName>
        <description>Medical device terminology</description>
        <label>Medical device terminology</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EMDN</fullName>
                </value>
                <value>
                    <fullName>GMDN</fullName>
                </value>
                <value>
                    <fullName>UMDNS(ECRI)</fullName>
                </value>
                <value>
                    <fullName>GIVD/EDMS</fullName>
                </value>
                <value>
                    <fullName>Other, Please Specify First Declaration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Model__c</fullName>
        <description>Model</description>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Month__c</fullName>
        <description>Month</description>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__NL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NL</description>
        <label>NL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__NO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NO</description>
        <label>NO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Near_Patient_Testing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Near-Patient Testing</description>
        <label>Near-Patient Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Neither_with_explanation__c</fullName>
        <description>Neither (with explanation)</description>
        <inlineHelpText>Neither (with explanation)</inlineHelpText>
        <label>Neither (with explanation)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Nomenclature_text_Description__c</fullName>
        <description>Nomenclature text/Description of the device</description>
        <label>Nomenclature text/Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Non_Medical_Purpose__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Non-Medical Purpose</description>
        <label>Non-Medical Purpose</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Notified_Body_Certificate_Number_1__c</fullName>
        <description>Notified Body Certificate Number</description>
        <label>1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Notified_Body_Certificate_Number_2__c</fullName>
        <description>Notified Body Certificate Number</description>
        <label>2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Notified_Body_ID_Number_1__c</fullName>
        <description>Notified body (NB) ID number(s)</description>
        <label>1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Notified_Body_ID_Number_2__c</fullName>
        <description>Notified_Body_ID_Number_2</description>
        <label>2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Number_Of_Days__c</fullName>
        <description>Number Of Days</description>
        <label>Number Of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Number_Of_Months__c</fullName>
        <description>Number Of Months</description>
        <label>Number Of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Number_Of_Years__c</fullName>
        <description>Number Of Years</description>
        <label>Number Of Years</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Others__c</fullName>
        <description>Others</description>
        <label>Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__PL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PL</description>
        <label>PL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__PT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PT</description>
        <label>PT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Procedure_Packs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Procedure Packs</description>
        <label>Procedure Packs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Professional_Testing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Professional Testing</description>
        <label>Professional Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__RO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RO</description>
        <label>RO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Reagent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reagent</description>
        <label>Reagent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Body__c</fullName>
        <description>Regulatory Body</description>
        <formula>QPMS__Regulatory_Report__r.QPMS__Regulatory_Body__c</formula>
        <label>Regulatory Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds Regulatory report value</description>
        <label>Regulatory Report</label>
        <referenceTo>QPMS__Regulatory_Report__c</referenceTo>
        <relationshipLabel>Medical Device Informations</relationshipLabel>
        <relationshipName>Medical_Device_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Relevant_Accessories_Used_With_The_Devic__c</fullName>
        <description>Relevant accessories used with the device being reported on (please list with corresponding Manufacturer if different from device being reported on)</description>
        <label>Relevant Accessories Used With The Devic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Relevant_Associated_Devices_Used__c</fullName>
        <description>Relevant associated devices used with the device being reported on (please list with corresponding Manufacturer if different from device being reported on)</description>
        <label>Relevant Associated Devices Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Reusable_Surgical_Instruments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reusable Surgical Instruments</description>
        <label>Reusable Surgical Instruments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__SE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SE</description>
        <label>SE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__SK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SK</description>
        <label>SK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__SL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SL</description>
        <label>SL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Self_Testing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Self-Testing</description>
        <label>Self-Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Serial_Number__c</fullName>
        <description>Serial Number</description>
        <label>Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Software_Version__c</fullName>
        <description>Software Version</description>
        <label>Software Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Software__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Software</description>
        <label>Software</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Sterile_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sterile Conditions</description>
        <label>Sterile Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Systems__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Systems</description>
        <label>Systems</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__TR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TR</description>
        <label>TR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Trade_Brand_Name__c</fullName>
        <description>Trade/Brand Name</description>
        <inlineHelpText>Trade/Brand Name</inlineHelpText>
        <label>Trade/Brand Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Type_Software__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Software</description>
        <label>Software</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Type_Sterile_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sterile Conditions</description>
        <label>Sterile Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__UDI_device_identifier_Eudamed_ID__c</fullName>
        <description>UDI device identifier/Eudamed ID</description>
        <label>UDI device identifier/Eudamed ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__UDI_production_identifier__c</fullName>
        <description>UDI production identifier</description>
        <label>UDI production identifier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Unit_of_use_UDI_DI__c</fullName>
        <description>Unit of use UDI-DI</description>
        <label>Unit of use UDI-DI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Was_the_device_labelled_as_sterile__c</fullName>
        <description>Was the device labelled as sterile?</description>
        <inlineHelpText>Was the device labelled as sterile?</inlineHelpText>
        <label>Was the device labelled as sterile?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Year__c</fullName>
        <description>Year</description>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__i_Device_Classification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>i</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__ii_Device_Classification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ii</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__iii_Device_Classification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>iii</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__iv_Device_Classification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>iv</label>
        <type>Checkbox</type>
    </fields>
    <label>Medical Device Information</label>
    <nameField>
        <label>Medical device information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Device Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>